--- a/programming_basics_02.ipynb
+++ b/programming_basics_02.ipynb
@@ -37,14 +37,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def is the keyword we use to DEFINE a new function we want to make\n",
-    "# we could name our function anything we want, but picking a descriptive name is good\n",
-    "# any arguments we want our function to accept are placed in parentheses after the name\n",
-    "# multiple arguments can be separated with commas, and they can also be named anything\n",
-    "# lastly, a colon : is used to end the line.\n",
+    "# def is the keyword we use to DEFINE a new function we want to make.\n",
+    "# - We could name our function anything we want, but picking a descriptive name is good.\n",
+    "# - Any arguments we want our function to accept are placed in parentheses after the name.\n",
+    "# - Multiple arguments can be separated with commas, and they can also be named anything.\n",
+    "# - Lastly, a colon : is used to end the line.\n",
     "def linear_slope(x_value):\n",
     "    # Python is a little funky and requires us to INDENT everything in a block of code after the :\n",
-    "    # our linear slope formula is Y=mx+b, where m = slope, x= position on the x axis, and b = y intercept\n",
+    "    # our linear slope formula is Y=mx+b, where m = slope, x = position on the x axis, and b = y intercept\n",
     "    y = 0.4 * x_value + 2.2\n",
     "    # once we've calculated something, we get to specify what the function gives back using return\n",
     "    return y"
@@ -122,10 +122,10 @@
     "# it just took its contents as input, and returned the contents in lower case.\n",
     "# but we didn't actually save the output to a variable.\n",
     "# let's give it a shot now; take the info currently stored in DNA, make it lower case, save output to variable\n",
-    "DNA=DNA.lower()\n",
+    "DNA = DNA.lower()\n",
     "print(DNA)\n",
-    "#we can go the other direction too if we want, which I like for aesthetic reasons\n",
-    "DNA=DNA.upper()\n",
+    "# we can go the other direction too if we want, which I like for aesthetic reasons\n",
+    "DNA = DNA.upper()\n",
     "print(DNA)"
    ]
   },
@@ -135,8 +135,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#let's say we want to know how many adenine there are; \n",
-    "#this would give an erroneous result if not all adenine were upper case since we're matching 'A' but not 'a'\n",
+    "# let's say we want to know how many adenine there are;\n",
+    "# this would give an erroneous result if not all adenine were upper case since we're matching 'A' but not 'a'\n",
     "DNA.count('A')"
    ]
   },
@@ -158,7 +158,9 @@
     "\n",
     "It's time for you all to use your programming knowledge to solve a problem: you're going to calculate the GC% of a new DNA sequence!\n",
     "\n",
-    "I've written most of the code you'll need below, but some pieces are missing. Think of this kind of like a madlib; the framework is already provided for you, but there's some blanks that you need to fill in."
+    "I've written most of the code you'll need below, but some pieces are missing. Think of this kind of like a madlib; the framework is already provided for you, but there's some blanks that you need to fill in.\n",
+    "\n",
+    "Note: This cell will **not** run as is. You need to add code to remove the syntax errors."
    ]
   },
   {
@@ -177,13 +179,13 @@
     "# first it's good to plan for what values you'll need\n",
     "# to calculate GC% you'll need the number of G bases and C bases, divided by the total number of bases!\n",
     "\n",
-    "# put in the function to count your guanine here\n",
+    "# put in the method to count your guanine here\n",
     "G_count = DNA2\n",
     "\n",
     "# next, do cystine\n",
     "C_count = DNA2\n",
     "\n",
-    "# the last number will be the total number of bases, or sequence LENGTH which you know how to get\n",
+    "# the last number will be the total number of bases, or sequence LENGTH, which you know how to get\n",
     "total_count =\n",
     "\n",
     "# now put it all together; use context from other lines of code to figure out your variable name here\n",
@@ -207,7 +209,7 @@
    "outputs": [],
    "source": [
     "# the string.replace() method is going to do the heavy lifting here\n",
-    "# first, let's look at how the method works \n",
+    "# first, let's look at how the method works\n",
     "temp = \"test string\"\n",
     "temp.replace(\"t\", \"b\")"
    ]
@@ -243,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# base complement time \n",
+    "# base complement time\n",
     "# first, which DNA bases pair with which?\n",
     "# A -> T ; T -> A ; C -> G ; G -> C\n",
     "\n",
@@ -303,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# meet the keyword import\n",
+    "# Meet the keyword: import\n",
     "# random is the package name; unsurprisingly, it deals with generating (pseudo)random numbers\n",
     "import random"
    ]
@@ -317,7 +319,7 @@
     "# importing the package means Python recognizes that the word \"random\" means something\n",
     "# in fact, \"random\" is now an object in your NAMESPACE, containing all of the function, method, data type, etc. definitions contained in the package.\n",
     "\n",
-    "# the random() function returns a number between 0 and 1, very useful\n",
+    "# the random() function within the random package returns a number between 0 and 1, very useful\n",
     "print(random.random())\n",
     "# there are a bunch of other options, like drawing from a specified uniform distribution\n",
     "print(random.uniform(0,10))\n",
@@ -331,7 +333,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# numpy is a very common python package that deals with number; pronounced num-pie\n",
+    "# numpy is a very common python package that efficiently deals with numbers; pronounced num-pie.\n",
+    "# You should have numpy already installed if you are using the Anaconda distribution.\n",
+    "# Otherwise, let me know and I'll help you get it installed\n",
     "import numpy\n",
     "print(numpy.sin(2))\n",
     "# you can even change the names of things you import to make them more convenient\n",
@@ -381,16 +385,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "name": "python"
   }
  },
  "nbformat": 4,
