fix variable name in comments

--- a/programming_basics_01.ipynb
+++ b/programming_basics_01.ipynb
@@ -502,8 +502,8 @@
     "text = \"My favorite number is \"\n",
     "# we know what happens when we try to + a string and an int already....an  error!\n",
     "\n",
-    "# we need to turn myFavorite from an int to a string\n",
-    "# take myFavorite, the integer, stick it into the str() cast function, and save our string output\n",
+    "# we need to turn favorite from an int to a string\n",
+    "# take favorite, the integer, stick it into the str() cast function, and save our string output\n",
     "favorite = str(favorite)\n",
     "#stick our two strings together and display\n",
     "final_text = text + favorite\n",
